fix icons not disappearing on small screens

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -110,7 +110,7 @@ code {
       margin: 0;
     }
 
-    @media only screen and (max-width: 616) {
+    @media screen and (max-width: 616px) {
       display: none;
     }
   }
